force-app/main/default/objects/PAY_Payment_Detail__c/PAY_Payment_Detail__c.object-meta.xml
<CustomObject>
    <label>Payment Detail</label>
    <nameField>
        <displayFormat>PAY-{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>