force-app/main/default/objects/PAY_Payment_Detail__c/fields/Cash_Back_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cash_Back_Amount__c</fullName>
    <label>Cash Back Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>