force-app/main/default/objects/PAY_Payment_Detail__c/fields/Closure_Comments__c.field-meta.xml
<CustomField>
    <fullName>Closure_Comments__c</fullName>
    <label>Closure Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>