force-app/main/default/objects/PAY_Payment_Detail__c/fields/Is_Debit_From_Bank__c.field-meta.xml
<CustomField>
    <fullName>Is_Debit_From_Bank__c</fullName>
    <label>Is the money debited from bank account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>