force-app/main/default/objects/PAY_Payment_Detail__c/fields/Issue_description__c.field-meta.xml
<CustomField>
    <fullName>Issue_description__c</fullName>
    <label>Issue description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>