force-app/main/default/objects/PAY_Payment_Detail__c/fields/Issue_Related_To__c.field-meta.xml
<CustomField>
    <fullName>Issue_Related_To__c</fullName>
    <label>Issue Related To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sending money</fullName>
            </value>
            <value>
                <fullName>Receiving money</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>