force-app/main/default/objects/PAY_Payment_Detail__c/fields/Merchant_Biller_Name__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Biller_Name__c</fullName>
    <label>Merchant Biller Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>