force-app/main/default/objects/PAY_Payment_Detail__c/fields/Nature_Of_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Nature_Of_Transaction__c</fullName>
    <label>Nature Of Transaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P2P</fullName>
            </value>
            <value>
                <fullName>P2M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>