force-app/main/default/objects/PAY_Payment_Detail__c/fields/Payment_mode__c.field-meta.xml
<CustomField>
    <fullName>Payment_mode__c</fullName>
    <label>Payment mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>