force-app/main/default/objects/PAY_Payment_Detail__c/fields/Status_of_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Status_of_Transaction__c</fullName>
    <label>Status of Transaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>