force-app/main/default/objects/PAY_Payment_Detail__c/fields/Txn_amount__c.field-meta.xml
<CustomField>
    <fullName>Txn_amount__c</fullName>
    <label>Txn amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>