force-app/main/default/objects/PAY_Payment_Detail__c/fields/Txn_date_time__c.field-meta.xml
<CustomField>
    <fullName>Txn_date_time__c</fullName>
    <label>Txn date/ time</label>
    <type>DateTime</type>
</CustomField>