force-app/main/default/objects/PAY_Payment_Detail__c/fields/Txn_ref_no__c.field-meta.xml
<CustomField>
    <fullName>Txn_ref_no__c</fullName>
    <label>Txn ref no</label>
    <length>255</length>
    <type>Text</type>
</CustomField>