force-app/main/default/objects/PAY_Payment_Detail__c/validationRules/Transaction_Date_Future_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Transaction_Date_Future_Check</fullName>
    <active>true</active>
    <errorConditionFormula>Txn_date_time__c  &gt;= NOW()</errorConditionFormula>
    <errorDisplayField>Txn_date_time__c</errorDisplayField>
    <errorMessage>Please select a valid date in the past.</errorMessage>
</ValidationRule>